--- a/webapp/index.html
+++ b/webapp/index.html
@@ -49,11 +49,11 @@
     <style type="text/css">
     </style>
 
-    <script type="text/javascript" src="src/common.js?v=4"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=4"></script>
-    <script type="text/javascript" src="src/second_screen.js?v=4"></script>
-
-    <script type="text/javascript" src="src/play.js?v=4"></script>
+    <script type="text/javascript" src="src/common.js?v=5"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=5"></script>
+    <script type="text/javascript" src="src/second_screen.js?v=5"></script>
+    <script type="text/javascript" src="src/poll.js?v=5"></script>
+    <script type="text/javascript" src="src/play.js?v=5"></script>
     <script type="text/javascript">
       window.onload = function() {
         get_uid();  // create in case not exists yet
@@ -80,6 +80,7 @@
             brands = get_items_from_local_storage('choises4');
           //save_into_remote_storage('/register/player/brands', brands);
 
+          init_orgs_poll();
           play();
         }
       }
@@ -160,7 +161,7 @@
                 <div class="swiper-pagination swiper-inner-pagination"></div>
               </div>
             </div>
-            <div id="list" class="swiper-slide non-white-bg">
+            <div class="swiper-slide non-white-bg list-">
               <h2>Ваши розыгрыши</h2>
               <div id="drawings_list">
                 <div id="yesterday">
@@ -177,12 +178,13 @@
               </div>
             </div>
 
-            <div id="" class="swiper-slide non-white-bg">
+            <div class="swiper-slide non-white-bg list-">
               <h2>Ваши настройки и бренды</h2>
               <h3>О вас</h3>
               <div id="mini_app_settings"></div>
               <h3>Бренды</h3>
               <p>Выберите бренды, которые вы чаще всего посещаете, в розыгрыше подарков от которых вы хотели бы участвовать</p>
+              <div id="list" class="section"><b>Пожалуйста, подождите, список организаций загружается...</b></div>
             </div>
           </div>
           <div class="swiper-pagination swiper-outer-pagination"></div>
