--- a/webapp/index.html
+++ b/webapp/index.html
@@ -174,14 +174,51 @@
 
             <div class="swiper-slide non-white-bg list-">
               <h2>Ваши настройки и бренды</h2>
-              <p style="font-size: 1em">Благодаря правдивой информации ниже бренды узнают, какая аудитория их поддерживает &mdash; что помогает им делать адекватные предложения и подарки.</p>
-              <h3>О вас</h3>
+              <p>Настройки ниже, как и все участия в розыгрышах, <b>полностью анонимные</b>.</p>
+              <p>Благодаря правдивой информации, указанной вами ниже, владельцы брендов узнают, какая аудитория их поддерживает &mdash; что помогает им придумывать лучшие предложения и подарки для вас.</p>
+
+              <div class="accordion" id="accordionExample">
+                <div style="margin-bottom: 5px;">
+                  <div class="accordion-item">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                        О вас
+                      </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        <div id="mini_app_settings"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div id="brands">
+                  <div class="accordion-item">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                        Бренды
+                      </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        
+                        <p>Выберите бренды, которые вы любите, точки продаж которых вы чаще всего посещаете, в розыгрыше подарков от которых вы хотели бы участвовать.</p>
+                        <p style="font-size: 0.8em;">Если вы заметили, что какого-то бренда не хватает, пожалуйста, <a href="https://vk.com/adwesome" target="_blank">сообщите нам</a>.</p>
+                        <div id="list" class="section"><p><b>Пожалуйста, подождите, список организаций загружается...</b></p></div>
+                      
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!--h3>О вас</h3>
               <div id="mini_app_settings"></div>
               <div id="brands">
                 <h3>Бренды</h3>
                 <p>Выберите бренды, которые вы чаще всего посещаете, в розыгрыше подарков от которых вы хотели бы участвовать. Если вы заметили, что какого-то бренда нет, пожалуйста, <a href="https://vk.com/adwesome" target="_blank">сообщите нам</a>.</p>
                 <div id="list" class="section"><p><b>Пожалуйста, подождите, список организаций загружается...</b></p></div>
-              </div>
+              </div-->
             </div>
           </div>
           <div class="swiper-pagination swiper-outer-pagination"></div>
