--- a/webapp/index.html
+++ b/webapp/index.html
@@ -174,8 +174,8 @@
 
             <div class="swiper-slide non-white-bg list-">
               <h2>Ваши настройки и бренды</h2>
-              <p>Настройки ниже, как и все участия в розыгрышах, <b>полностью анонимные</b>.</p>
               <p>Благодаря правдивой информации, указанной вами ниже, владельцы брендов узнают, какая аудитория их поддерживает &mdash; что помогает им придумывать лучшие предложения и подарки для вас.</p>
+              <p style="font-size: 0.85em;">Настройки ниже, как и все участия в розыгрышах, <b>полностью анонимные</b>.</p>
 
               <div class="accordion" id="accordionExample">
                 <div style="margin-bottom: 5px;">
@@ -201,11 +201,9 @@
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        
                         <p>Выберите бренды, которые вы любите, точки продаж которых вы чаще всего посещаете, в розыгрыше подарков от которых вы хотели бы участвовать.</p>
-                        <p style="font-size: 0.8em;">Если вы заметили, что какого-то бренда не хватает, пожалуйста, <a href="https://vk.com/adwesome" target="_blank">сообщите нам</a>.</p>
+                        <p style="font-size: 0.85em;">Если вы заметили, что какого-то бренда не хватает, пожалуйста, <a href="https://vk.com/adwesome" target="_blank">сообщите нам</a>.</p>
                         <div id="list" class="section"><p><b>Пожалуйста, подождите, список организаций загружается...</b></p></div>
-                      
                       </div>
                     </div>
                   </div>
