--- a/webapp/index.html
+++ b/webapp/index.html
@@ -106,7 +106,7 @@
           <div class="col-xl-4 offset-xl-4 col-lg-6 offset-lg-3 col-md-8 offset-md-2 col-12 screen">
             <div class="col-10 offset-1">
               <div id="second_screen">
-                <p style="margin-bottom: 1em;">Выберите ниже 1 или 2 бренда, в пробном розыгрыше подарков от которых вы хотите поучаствовать на выходных 16&nbsp;и&nbsp;17&nbsp;ноября:</p>
+                <p style="margin-bottom: 1em;">Выберите ниже 1 или 2 бренда, в пробном розыгрыше подарков от которых вы хотите поучаствовать 15&nbsp;и&nbsp;16&nbsp;ноября:</p>
                 <img id="brand-mk" class="brand mk" src="img/brands/logos/mk.png"><br>
                 <img id="brand-lenta" class="brand lenta" src="img/brands/logos/lenta.png">
                 
