--- a/webapp/index.html
+++ b/webapp/index.html
@@ -89,7 +89,7 @@
             <div class="col-10 offset-1">
               <div id="first_screen">
                 <h2>Добро пожаловать!</h2>
-                <p style="margin-bottom: 1em;">Прежде чем перейти к розыгрышам подарков, расскажите нам, пожалуйста, немного о себе. Эта анкета и участия в розыгрышах <b>полностью анонимные</b>.</p>
+                <p style="margin-bottom: 1em;">Прежде чем перейти к розыгрышам подарков, расскажите нам, пожалуйста, немного о себе. Эта анкета, как и участия в розыгрышах, <b>полностью анонимные</b>.</p>
                 <div id="first_screen_demography_poll"></div>
                 <div class="d-grid gap-2">
                   <button id="to_second" class="btn btn-primary" disabled>Далее</button>
