--- a/webapp/index.html
+++ b/webapp/index.html
@@ -175,7 +175,7 @@
             <div class="swiper-slide non-white-bg list-">
               <h2>Ваши настройки и бренды</h2>
               <p>Благодаря правдивой информации, указанной вами ниже, владельцы брендов узнают, какая аудитория их поддерживает &mdash; что помогает им придумывать лучшие предложения и подарки для вас.</p>
-              <p style="font-size: 0.85em;">Настройки ниже, как и все участия в розыгрышах, <b>полностью анонимные</b>.</p>
+              <p style="font-size: 0.85em;">Выбранные вами опции ниже, как и все ваши участия в розыгрышах &mdash; <b>полностью анонимные</b>.</p>
 
               <div class="accordion" id="accordionExample">
                 <div style="margin-bottom: 5px;">
