--- a/webapp/index.html
+++ b/webapp/index.html
@@ -49,11 +49,11 @@
     <style type="text/css">
     </style>
 
-    <script type="text/javascript" src="src/common.js?v=4"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=4"></script>
-    <script type="text/javascript" src="src/second_screen.js?v=4"></script>
-    <script type="text/javascript" src="src/poll.js?v=4"></script>
-    <script type="text/javascript" src="src/play.js?v=4"></script>
+    <script type="text/javascript" src="src/common.js?v=5"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=5"></script>
+    <script type="text/javascript" src="src/second_screen.js?v=5"></script>
+    <script type="text/javascript" src="src/poll.js?v=5"></script>
+    <script type="text/javascript" src="src/play.js?v=5"></script>
     <script type="text/javascript">
       window.onload = function() {
         get_uid();  // create in case not exists yet
@@ -159,7 +159,7 @@
               <h2>Ваши розыгрыши</h2>
               <div id="drawings_list">
                 <div id="yesterday">
-                  <h3>Вчера</h3>
+                  <h3>Вчера и позавчера</h3>
                   <div id="just"><p>Нет</p></div>  
                 </div>
                 <h3>Сегодня</h3>
