--- a/webapp/index.html
+++ b/webapp/index.html
@@ -157,7 +157,8 @@
               <h2>Ваши розыгрыши</h2>
               <div id="drawings_list">
                 <div id="yesterday">
-                  <h3>Вчера и позавчера</h3>
+                  <!--h3>Вчера и позавчера</h3-->
+                  <h3>Вчера</h3>
                   <div id="just"><p>Нет</p></div>  
                 </div>
                 <h3>Сегодня</h3>
