--- a/webapp/index.html
+++ b/webapp/index.html
@@ -107,9 +107,9 @@
           <div class="col-xl-4 offset-xl-4 col-lg-6 offset-lg-3 col-md-8 offset-md-2 col-12 screen">
             <div class="col-10 offset-1">
               <div id="second_screen">
-                <p style="margin-bottom: 1em;">Выберите ниже 1 или 2 бренда, в пробном розыгрышах подарков от которых вы хотите поучаствовать 15&nbsp;и&nbsp;16&nbsp;ноября:</p>
-                <img id="brand-mk" class="brand mk" src="img/brands/logos/mk.png"><br>
-                <img id="brand-lenta" class="brand lenta" src="img/brands/logos/lenta.png">
+                <p style="margin-bottom: 1em;">Выберите ниже 1 или 2 бренда, в пробном розыгрышах подарков от которых вы хотите поучаствовать:</p>
+                <img id="brand-107" class="brand bid-107" src="img/brands/logos/mk.png"><br>
+                <img id="brand-55" class="brand bid-55" src="img/brands/logos/lenta.png">
                 
                 <div class="d-grid gap-2" style="margin-top: 1.2em;">
                   <button id="to_third" class="btn btn-primary" disabled>Начать розыгрыш</button>
