--- a/webapp/index.html
+++ b/webapp/index.html
@@ -51,12 +51,17 @@
 
     <script type="text/javascript" src="src/common.js?v=1"></script>
     <script type="text/javascript" src="src/first_screen.js?v=1"></script>
-    <script type="text/javascript" src="src/second_screen.js?v=1"></script>
+    <!--script type="text/javascript" src="src/second_screen.js?v=1"></script-->
     <script type="text/javascript" src="src/poll.js?v=1"></script>
     <script type="text/javascript" src="src/play.js?v=1"></script>
     <script type="text/javascript">
-      window.onload = function() {
-        get_uid();  // create in case not exists yet
+      window.onload = async function() {
+        const tguid = get_tguid_from_url();
+        if (tguid == -1)
+          return;
+
+        // global var
+        uid = await get_uid(tguid);  // create in case not exists yet
 
         window.Telegram.WebApp.ready();
         window.Telegram.WebApp.expand();
@@ -64,6 +69,8 @@
         //window.Telegram.WebApp.setBackgroundColor("#fffaf0");  // floralwhite
         window.Telegram.WebApp.setHeaderColor("#fffaf0");  // floralwhite
 
+        play();
+        /*
         if (!get_item_from_local_storage('first_screen_passed'))
           draw_demography('first_screen_demography_poll');
         else if (!get_item_from_local_storage('second_screen_passed'))
@@ -78,6 +85,7 @@
 
           play();
         }
+        */
       }
     </script>
   </head>
@@ -88,15 +96,14 @@
         <div class="row">
           <div class="col-xl-4 offset-xl-4 col-lg-6 offset-lg-3 col-md-8 offset-md-2 col-12 screen">
             <div class="col-10 offset-1">
-              <div id="first_screen">
+              <!--div id="first_screen">
                 <h2>Добро пожаловать!</h2>
                 <p style="margin-bottom: 1em;">Прежде чем перейти к розыгрышам подарков, расскажите нам, пожалуйста, немного о себе. Эта анкета, как и участия в розыгрышах, <b>полностью анонимные</b>.</p>
                 <div id="first_screen_demography_poll"></div>
                 <div class="d-grid gap-2">
                   <button id="to_second" class="btn btn-primary" disabled>Далее</button>
-                  <!--p style="font-size: 0.8em;"><i>Далее: выбор брендов</i></p-->
                 </div>
-              </div>
+              </div-->
             </div>
           </div>
         </div>
