--- a/webapp/index.html
+++ b/webapp/index.html
@@ -183,8 +183,7 @@
 
             <div class="swiper-slide non-white-bg list-">
               <h2>Ваши настройки и бренды</h2>
-              <p>Благодаря правдивой информации, указанной вами ниже, владельцы брендов узнают, какая аудитория их поддерживает &mdash; что помогает им придумывать лучшие предложения и подарки для вас.</p>
-              <p style="font-size: 0.85em;">Выбранные вами опции ниже, как и все ваши участия в розыгрышах &mdash; <b>полностью анонимные</b>.</p>
+              <p>На основе данных, указанными вами ниже, система предлагает наиболее интересные вам розыгрыши, а владельцы брендов узнают, какая аудитория их поддерживает &mdash; и придумывают для вас лучшие предложения и подарки.</p>
 
               <div class="accordion" id="accordionExample">
                 <div style="margin-bottom: 5px;">
