--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,23 +6,21 @@
     <title>Розыгрыш подарков</title>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4DSL3R9T5W"></script>
+    <!--script async src="https://www.googletagmanager.com/gtag/js?id=G-4DSL3R9T5W"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-4DSL3R9T5W');
-    </script>
+    </script-->
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link href="src/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <script src="src/bootstrap/bootstrap.bundle.min.js"></script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+    <link href="src/fonts/Nunito.css?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="src/chartjs/chart.js"></script>
 
     <!-- https://core.telegram.org/bots/webapps#initializing-web-apps -->
     <script src="src/telegram/telegram-web-app.js"></script>
@@ -34,8 +32,8 @@
       vkBridge.send('VKWebAppInit');
     </script-->
     
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <link rel="stylesheet" href="src/swiper/swiper-bundle.min.css"/>
+    <script src="src/swiper/swiper-bundle.min.js"></script>
 
     <script type="text/javascript" src="src/nanobar/nanobar.min.js"></script>
 
