--- a/webapp/index.html
+++ b/webapp/index.html
@@ -222,7 +222,7 @@
                     <div id="collapseTwo" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
                         <p>Выберите бренды, которые вы любите, точки продаж которых вы чаще всего посещаете, в розыгрыше подарков от которых вы хотели бы участвовать.</p>
-                        <p style="font-size: 0.85em;">Если вы заметили, что какого-то бренда не хватает, пожалуйста, <a href="https://vk.com/adwesome" target="_blank">сообщите нам</a>.</p>
+                        <p style="font-size: 0.85em;">Если вы заметили, что какого-то бренда не хватает, пожалуйста, <a href="https://telegram.me/alexeyhimself" target="_blank">сообщите нам</a>.</p>
                         <div id="list" class="section"><p><b>Пожалуйста, подождите, список организаций загружается...</b></p></div>
                       </div>
                     </div>
