--- a/webapp/index.html
+++ b/webapp/index.html
@@ -59,7 +59,7 @@
           document.getElementById('tg_only').style.display = 'block';
           let uid = localStorage.getItem('uid');
           if (uid) {
-            text += '<p>Используя этот браузер, вы участвовали в пробном розыгрыше, который проходил 15-16 ноября 2024.</p><p>Чтобы перенести все ваши ранее выбранные опции (регион, пол, возраст, бренды) и историю розыгрышей в Телеграм, просто пройдите по ';
+            text += `<p>Используя этот браузер (ID: ${uid}), вы участвовали в пробном розыгрыше, который проходил 15-16 ноября 2024.</p><p>Чтобы перенести все ваши ранее выбранные опции (регион, пол, возраст, бренды) и историю розыгрышей в Телеграм, просто пройдите по `;
             text += `<a href="https://telegram.me/adte_bot?start=${uid}">этой ссылке</a> &mdash; и запустите телеграм бота.</p>`;
           }
           else {
