--- a/webapp/index.html
+++ b/webapp/index.html
@@ -56,7 +56,7 @@
         try {
         tguid = get_tguid_from_url();
         document.getElementById('ll').innerHTML += window.location.href;
-        await sleep(2000);
+        await sleep(5000);
         if (tguid == -1) {
           let text = '';
           document.getElementById('tg_only').style.display = 'block';
@@ -79,7 +79,7 @@
         // global var
         uid = await get_uid(tguid);  // create in case not exists yet
         document.getElementById('ll').innerHTML += '<br>' + uid
-        await sleep(2000);
+        await sleep(5000);
 
         window.Telegram.WebApp.ready();
         window.Telegram.WebApp.expand();
@@ -107,7 +107,7 @@
         */
         }
         catch(error) {
-          document.getElementById('ll').innerHTML = error
+          document.getElementById('ll').innerHTML += '<br>' + error;
         }
       }
     </script>
