--- a/webapp/index.html
+++ b/webapp/index.html
@@ -107,6 +107,7 @@
         */
         }
         catch(error) {
+          return
           document.getElementById('ll').innerHTML += '<br>' + error;
         }
       }
